Fix Esm.run gaps, heights

--- a/src/public/less/pages/esm.less
+++ b/src/public/less/pages/esm.less
@@ -20,6 +20,7 @@
 
 		@media (min-width: @screen-sm-min) {
 			padding-bottom: 68px;
+			row-gap: 80px;
 		}
 
 		&_title {
@@ -30,7 +31,7 @@
 			margin: 44px 0 0;
 
 			@media (min-width: @screen-sm-min) {
-				margin: 64px 0 96px;
+				margin: 64px 0 16px;
 			}
 
 			h1, h2 {
@@ -246,13 +247,23 @@
 						}
 
 						@media (min-width: @screen-sm-min) {
+							grid-template-columns: minmax(104px, auto) minmax(60px, auto) 1fr;
 							font-size: 16px;
 							line-height: 24px;
 							height: 54px;
 						}
 
+						@media (min-width: @screen-md-min) {
+							grid-template-columns: repeat(2, minmax(104px, auto)) 1fr;
+						}
+
 						&.state-title {
 							grid-template-columns: 1fr;
+							height: 72px;
+							font-weight: 600;
+							font-size: 16px;
+							line-height: 24px;
+							letter-spacing: .2px;
 						}
 
 						span {
